# openWakeWord

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  my_model.yaml  pyproject.toml  requirements.txt  resample.py  setup.py
.github/workflows/: build_and_publish_to_pypi.yml  python-package.yml  tests.yml
benchmark/: benchmark.py
docs/: custom_verifier_models.md  synthetic_data_generation.md
docs/models/: alexa.md  hey_jarvis.md  hey_mycroft.md  timers.md  weather.md
examples/: README.md  benchmark_efficiency.py  capture_activations.py  capture_activations_barco.py  capture_activations_stryker.py  capture_activations_voice_genie.py  capture_activations_zelda.py  capture_activations_zelda_negative.py  custom_model.yml  detect_from_microphone.py  mine_false_positives.py
examples/utils/: beep.py
examples/web/: README.md  streaming_client.html  streaming_server.py
notebooks/: .gitignore  TEMPLATE_DO_NOT_EDIT_wakeword_training.ipynb  automatic_model_training.ipynb  converting_google_speech_embedding_model.ipynb  false_validation_set_generator.ipynb  performance_metrics.ipynb  training_models.ipynb
openwakeword/: __init__.py  custom_verifier_model.py  data.py  data_augmentation.py  detect.py  metrics.py  model.py  train.py  utils.py  vad.py
openwakeword/resources/models/: alexa_v0.1.onnx  alexa_v0.1.tflite  embedding_model.onnx  embedding_model.tflite  feature_buffer_reset_data.npy  hey_jane.onnx  hey_jarvis_v0.1.onnx  hey_jarvis_v0.1.tflite  hey_marvin_v0.1.onnx  (+12 more)
tests/: test_custom_verifier_model.py  test_models.py  test_self_confirm.py
wakeword_models/hey_barco/: hey_barcoh (2).onnx
wakeword_models/hey_stryker/: hey_stryker_dipco_1.onnx
wakeword_models/hey_zelda/: hey_Zelda_med_multi_phrase.onnx  hey_Zelda_negative1.onnx  hey_Zelda_negative1.tflite
wakeword_models/voice_genie/: voice_genie_v01.onnx
(+3 files in other folders)
