[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=openwakeword --cov-report term-missing --flake8 --mypy --mypy-ignore-missing-imports"
flake8-max-line-length = "140"
testpaths = [
    "tests",
    "openwakeword"
]

[project]
name = "private-assistant-openwakeword"
version = "0.6.0"
authors = [
  { name="stkr22", email="stkr22@github.com" },
]
description = "An open-source audio wake word (or phrase) detection framework with a focus on performance and simplicity. Fork of the original package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/stkr22/openWakeWord"